5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1644_2442.log
== TEST (2019-04-05 14:53:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 14:54:10) 
-- CODE:


num = int(input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 6
    mensagem = "Par"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:02:27) 
-- CODE:




num = int(input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(num)

-- ERROR:
File "XXXX", line 8
    mensagem = "Par"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:02:33) 
-- CODE:




num = int(input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(num)

-- ERROR:
File "XXXX", line 8
    mensagem = "Par"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:04:28) 
-- CODE:



num = int(input("Digite um numero: ")

if :(num % 2 == 0)
	mensagem = "Par"
else:
	mensagem = "Impar"

print(num)

-- ERROR:
File "XXXX", line 6
    if :(num % 2 == 0)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:04:47) 
-- CODE:



num = int(input("Digite um numero: ")

if: (num % 2 == 0)
	mensagem = "Par"
else:
	mensagem = "Impar"

print(num)

-- ERROR:
File "XXXX", line 6
    if: (num % 2 == 0)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:05:25) 
-- CODE:



num = int(input("Digite um numero: ")

if (num % 2 == 0):
	mensagem = "Par"
else:
	mensagem = "Impar"

print(num)

-- ERROR:
File "XXXX", line 6
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:06:20) 
-- CODE:



num = int(input("Digite um numero: ")

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

print(num)

-- ERROR:
File "XXXX", line 6
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:07:34) 
-- CODE:



num = int(input("Digite um numero: ")

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")



-- ERROR:
File "XXXX", line 6
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:04) 
-- CODE:



num = int(input("Digite um numero: ")

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")



-- ERROR:
File "XXXX", line 6
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:53) 
-- CODE:




num = int(input("Digite um numero: ")

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")



-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:08:53) 
-- CODE:




num = int(input("Digite um numero: ")

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")



-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:10:14) 
-- CODE:




num = int(input("Digite um numero: ")

if (num % 2 == 0):
	print("Par".lower())
else:
	print("Impar".lower())



-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:41:55) 
-- CODE:



num = int(input("Digite um numero: ")

if (num % 2 == 0):
	print("par")
else:
	print("impar")



-- EXECUTION TIME:
0.149449
-- ERROR:
  File "/home/codebench/codes/1644/2442/main.py", line 6
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:42:08) 
-- CODE:



num = int(input("Digite um numero: ")

if (num % 2 == 0):
	print("par")
else:
	print("impar")



-- ERROR:
File "XXXX", line 6
    if (num % 2 == 0):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:42:12) 
-- CODE:



num = int(input("Digite um numero: "))

if (num % 2 == 0):
	print("par")
else:
	print("impar")



-- EXECUTION TIME:
0.214319
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
